FIX #9511 Double scroll bar

--- a/src/frontend/app/administration/template/template-administration-checkEntities-modal.scss
+++ b/src/frontend/app/administration/template/template-administration-checkEntities-modal.scss
@@ -1,7 +1,8 @@
 .mat-dialog-content{
     height: auto !important;
     min-width: 30vw;
-    max-height: 65vh;
+    max-height: 90vh;
+    overflow: hidden !important;
 }
 
 .modal-body{
@@ -10,4 +11,13 @@
 
 mat-dialog-actions{
     justify-content: center;
+}
+
+mat-list{
+    overflow: auto;
+    max-height: 50vh;
+}
+
+.mat-dialog-content h2{
+    margin-top: 20px;
 }
